--- a/index.html
+++ b/index.html
@@ -553,23 +553,24 @@ nav ul li{
 </header>
 
 
-<span class="eMapas"><!--==================-->
+<span class="eMapas">
+<!--==================-->
 <center title="Clinte diz:">
 <div class="container">
 <div class="slide active">
-<p class="cT"><img src="img/i.jpg" class="ifoto"><i>Kwanzaki<br/><p class="tEX">"Bons serviços, estou amando."</i><br/><i style="color:#999fff;">25/01</i></p></p>
+<p class="cT"><img src="img/i.jpg" class="ifoto">Kwanzaki<br/><p class="tEX"><i><i>"Bons serviços, estou amando."</i><br/>25/01</p></p>
 <div id="next" onclick="next()"> >  </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 
 <div class="slide">
-<p class="cT"><img src="img/l.jpg" class="ifoto"><i>Yola Yola<br/><p class="tEX">"Eu amo os vossos serviços."</i><br/><i style="color:#999fff;">25/01</i></p></p>
+<p class="cT"><img src="img/l.jpg" class="ifoto">Yola Yola<br/><p class="tEX"><i>"Eu amo os vossos serviços."</i><br/>25/01</p></p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 	
 <div class="slide">
-<p class="cT"><img src="img/n.jpg" class="ifoto"><i>Edson Edson<br/><p class="tEX">"A vossa empresa é a melhor."</i><br/><i style="color:#999fff;">25/01</i></p></p>
+<p class="cT"><img src="img/n.jpg" class="ifoto">Edson Edson<br/><p class="tEX"><i>"A vossa empresa é a melhor."</i><br/>25/01</p></p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div> 
