--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 }
 body{
 	font-size: 20px;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 	background: rgba(0,0,0,.9);
+	/*background-image: url("img/c.jfif");*/
 }
 span{
 	color: yellow;
@@ -30,13 +35,10 @@ span{
 	padding: 10px 25px;
 	font-family: tahoma;
 	text-decoration: none; 
-	border: 1px solid yellow;
 	transition: all 0.5s ease;
-	border-top-left-radius: 5px;
-	border-top-right-radius: 20px;
 	box-shadow: 0 0 5px 1px yellow;
 	border-bottom-left-radius: 20px;
-	border-bottom-right-radius: 5px;
+	border-top-right-radius: 20px;
 }
 .btnApostar:active{
 	transform: scale(0.96);
@@ -48,7 +50,7 @@ span{
 }
 .sTock{
 	color: lime; 
-	padding: 10px;
+	padding: 15px;
 	background: green;
 	font-family: tahoma;
 }
@@ -66,12 +68,6 @@ span{
 }
 .btnEnviar:active{
 	transform: scale(0.96);
-}
-.eMapas{
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
 .borderMapas{
 	width: 80%;
@@ -142,26 +138,33 @@ span{
 	border-bottom-left-radius: 0px;
 }
 .eBox{
+	background: linear-gradient(45deg, blue, aqua, darkblue);
+	color: white;
+	border: 1px solid white;
+	box-shadow: 2px 2px 5px blue;
+	
 	left: 0px;
 	width: 30%;
-	z-index: 1;
+	z-index: 9;
 	bottom: 36px;
 	padding: 6px;
-	color: #77ffbb;
 	font-size: 15px;
 	position: fixed;
-	border: 1px solid #77ffbb;
-	background: rgba(0,0,0,0.9);
-	border-top-left-radius: 5px;
-	border-bottom-right-radius: 5px;
+	cursor: pointer;
 	border-top-right-radius: 20px;
 	border-bottom-left-radius: 20px;
-	box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
 }
+.eBox:hover{
+	
+	color: #77ffbb;
+	/*border: 1px solid #77ffbb;
+	background: rgba(0,0,0,0.9);color: white;
+	box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
+*/}
 .eCopy{
 	width: 100%;
 	height: 33px;
-  	width: 100%;
+  width: 100%;
 	z-index: 4;
 	color: #999;
 	bottom: 0px;
@@ -170,8 +173,8 @@ span{
 	text-align: right;
 	font-family: tahoma;
 	border-top: 1px solid #333;
-	background: rgba(0, 0, 0, 0.9);
-	box-shadow: 2px 2px 12px aqua, -1px -1px -1px aqua;
+	background: rgba(0,0,0,0.9);
+	box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 18px rgba(0, 0, 0, 0.2);
 }
 .eYear{
 	color: #333; /*#5ff1dd;*/
@@ -182,8 +185,8 @@ span{
 	background: #77ffbb;/*#7ff700;*/
 	color: #333; 
 	font-size:13px;
-	padding: 10px 45px;
 	font-family: tahoma;
+	padding: 10px 45px;
 }
 .cTexto{
 	color:#ffbb00;
@@ -257,6 +260,7 @@ header{
 	align-items: center;
 	background: rgba(0,0,0,0.9);
 	justify-content: space-between;
+	z-index: 9;
 }
 .menu{
 	order: 2;
@@ -291,26 +295,23 @@ a{
 	text-decoration: none;
 }
 .cElect{
-	z-index: 6;
+	z-index: 99;
 	right: 41px;
-	color: white; 
+	color: #999;
 	bottom: 90px;
 	display: block;
 	cursor: pointer;
 	position: fixed;
 	font-size: 20px;
 	background: #111;
-	border-radius: 100px;
 	padding: 3px 8px 5px;
-	transition: all 0.2s ease;
+	border-radius: 100px;
+	transition: all 0.4s ease;
 	border: 2px solid rgba(255,255,9,.3);
 	animation: animate 1s linear infinite;
 	box-shadow: 0 0 0 2px green,
-			0 0 0 3px deepskyblue;
-	animation: El 1s ease-in-out infinite;
-}
-.cElect:active{
-	transform: scale(0.88);
+				0 0 0 3px deepskyblue;
+animation: El 1s ease-in-out infinite;
 }
 @keyframes El{
 0%{
@@ -322,14 +323,25 @@ a{
 100%{
 	transform: translateY(0);
 }
+}
+.cElect:active{
+	transform: scale(0.90);
 }	
 .alT{
-	bottom: 0%;
-	right: 1px;
 	opacity: 0;
-	color: #777;
+	z-index: -999;
+	color: transparent;
+	right: 5px;
+	bottom: 0px;
 	position: fixed;
+	font-size: 0px;
+	padding: 0px;
+	background: transparent;
 }
+
+
+
+
 
 
 
@@ -351,20 +363,24 @@ a{
 	display: block;
 	background: none;
 }
-.container{ padding: 5px;
-	color: aqua;
+.container{
+	padding: 5px;
+	color: yellow;
 	border-radius: 5px;
 	border: none;
 	display: block;
 	background: none;
-	z-index: 2;
+	z-index: 1;
 	background: none;
+	bottom: 70px;
+	left: 10px;
+	position: fixed;
 }
 .cT{
-	color: white;
+	color: #acdf99;
 	margin-top: 2px;
 	background: transparent;
-	font-size: 16px;
+	font-size: 13px;
 	display: block; 
     animation: testim .4s ease-in-out forwards;
 }
@@ -380,7 +396,7 @@ a{
 }
 .tEX{
     animation: start .4s ease-in-out forwards;
-	font-size: 18px;
+	font-size: 15px;
 }
 @keyframes start{
     from {
@@ -394,8 +410,8 @@ a{
 }
 .ifoto{
     display: block;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     margin: auto;
     border-radius: 50%;
 }
@@ -403,10 +419,25 @@ a{
 
 
 
+
+
+
+.eMapas{
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+
+
+
+
+
 @media only screen and (max-width: 900px){
 .ifoto{
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     margin: auto;
     border-radius: 50%;
 }
@@ -422,8 +453,12 @@ a{
 .cElect{
 	right: 15px;
 	bottom: 50px;
+	color: white;
 	font-size: 20px;
 	padding: 3px 8px 5px;
+}
+.cElect:active{
+	transform: scale(0.88);
 }
 .sTock{
 	padding: 0;
@@ -466,10 +501,10 @@ nav ul{
 	opacity: 0;
 	display: block;
 	transition: 0.0s;
-	margin-top: 10px;
 	text-align: center;
 	width: fit-content;
-	margin: 10px auto 0 auto;
+	margin: 80px auto 0 auto;
+	margin-top: 10px;
 }
 nav.active ul{
 	opacity: 1;
@@ -477,25 +512,20 @@ nav.active ul{
 nav ul li{
 	padding: 8px;
 	background:#222;
-	margin-top: 0px;
+	argin-top: 8px;
 	font-size: 17px;
 	border-top-right-radius: 20px;
 	border-bottom-left-radius: 20px;
 }
+	
 .btnApostar{
+	margin-top: 0px;
 	font-size: 15px;
-	padding: 10px 18px;
-	border: 1px solid yellow;
-	border-top-left-radius: 5px;
-	border-bottom-right-radius: 5px;
+	font-size: 18px;
 }
 .eBox{
 	width: 67%;
-	color: #77ffbb;
 	font-size: 13px;
-	border: 1px solid #77ffbb;
-	border-top-left-radius: 5px;
-	border-bottom-right-radius: 5px;
 }
 .eCY{
 	padding: 10px 15px;
@@ -518,22 +548,19 @@ nav ul li{
 .borderMapas{ 
 	width: 100%;
 }
-.cT{
-	bottom: 90px; 
-}
 }
 </style>
 </head>
 <body onload="initClock()">
-<div class="eCopy"><span class="eCY" title="Hpl. ©">Kki &copy; <span class="eYear" id="yeare"></span></span></div>
-<div class="eBox" id="clo" title="Info">Envie dinheiro e ganhe dinheiro em 30 minutos!</div>
+<div class="eCopy"><span class="eCY" title="Todos os direitos reservados">&copy; <span class="eYear" id="yeare"></span></span></div>
+<div class="eBox" id="clo" title="Info">Envia dinheiro e ganha dinheiro em 1 hora!</div>
 <a href="mailto:p1335614@gmail.com" title="Contactar" class="cElect" onclick="audio.play()">@</a>
 
 <header>
 		<div class="horas">
-			<a class="btnApostar" href="#modalbox1" title="Apostar" onclick="audio.play()">Enviar</a>
+					<a class="btnApostar" href="#modalbox1" title="Apostar" onclick="audio.play()">Enviar</a>
 		</div>
-		<div class="menu" title="Iniciar" onclick="audio.play()">
+		<div class="menu" title="Iniciar">
 			
 			<div class="le" onclick="audio.play()"></div>
 			<div class="le" onclick="audio.play()"></div>
@@ -546,37 +573,49 @@ nav ul li{
 					<span title="Horas"><span id="hour">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span> <span id="period">AM</span></span>
 				</li>
 				<li>
-					<span title="Stock" class="sTock">9.000,00 Kz</span>
+					<span title="Stock" class="sTock">7939,94 Kz</span>
 				</li>
 			</ul>
 		</nav>
 </header>
 
 
-<span class="eMapas">
-<!--==================-->
-<center title="Clinte diz:">
+<span class="eMapas"><center style="border: 0px solid #333; padding: 5px;"><h2>KWANZAKI</h2><p style="font-size: 15px; color: gold;border: 1px solid #333; padding:3px;">
+Somos uma empresa que presta serviços financeiros online.<br/><!--Invista em nossa empresa e ganha sampre!--></p></center></span>
+
+
+
+
+
+
+<span class=""><!--==================-->
+<center title="">
 <div class="container">
 <div class="slide active">
-<p class="cT"><img src="img/i.jpg" class="ifoto">Kwanzaki<br/><p class="tEX"><i><i>"Bons serviços, estou amando."</i><br/>25/01</p></p>
+<p class="cT"><img src="img/a.jpg" class="ifoto">Kwanzaki<br/><p class="tEX"><i>"Bons serviços, estou amando."</i><p style="color: #acdf99; font-size: 13px;">25/01</p></p></p>
 <div id="next" onclick="next()"> >  </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 
 <div class="slide">
-<p class="cT"><img src="img/l.jpg" class="ifoto">Yola Yola<br/><p class="tEX"><i>"Eu amo os vossos serviços."</i><br/>25/01</p></p>
+<p class="cT"><img src="img/b.jpg" class="ifoto">Yola Yola<br/><p class="tEX"><i>"Eu amo os vossos serviços."</i><p style="color: #acdf99; font-size: 13px;">25/01</p></p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 	
 <div class="slide">
-<p class="cT"><img src="img/n.jpg" class="ifoto">Edson Edson<br/><p class="tEX"><i>"A vossa empresa é a melhor."</i><br/>25/01</p></p>
+<p class="cT"><img src="img/c.jpg" class="ifoto">Edson Edson<br/><p class="tEX"><i>"A vossa empresa é a melhor."</i><p style="color: #acdf99; font-size: 13px;">25/01</p></p></p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div> 
 </div></center>
 <!--==================-->
 </span>
+
+
+
+
+
 
 <!--modal INFORMAÇÕES-->
 <div id="modalbox1" class="modal1">
@@ -588,7 +627,7 @@ nav ul li{
 	</thead>
 	<tbody style="background: rgba(0,0,9,0.9); color: #333; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
 	<tr>
-	<td class="cTexto" style="font-size: 12px; border: none; padding: 5px;">Acesse a sua conta Unitel money e transfira <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">50,00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money</b>. Após 30 minutos, receberás <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">60,00<!--(0123456789)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
+	<td class="cTexto" style="font-size: 12px; border: none; padding: 5px;">Acessa a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e transfira <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">50.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 1 hora, receberás <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">60.00<!--(0123456789)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
 	</tr>
 	</tbody>
 
@@ -605,8 +644,8 @@ nav ul li{
 	</thead>
 	<tbody style="background: rgba(0,0,9,0.9); color: #3ccf8b; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
 	<tr>
-	<td>60,11 Kz</td>
-	<td>08:00:27</td>
+	<td>60.06 Kz</td>
+	<td>12:00:27</td>
 	<td>94028...</td>
 	</tr>
 	</tbody>
@@ -615,8 +654,6 @@ nav ul li{
 </div>
 </div>
 
-
-	
 <script type="text/javascript">
 //Script ÁUDIO clicks
 	var audio = new Audio();
@@ -692,5 +729,6 @@ window.setInterval("updateClock()", 1);
 }
 </script>
 <a href="https://www.contadorvisitasgratis.com" target="_blank" class="alT" title="Visitas"><img src="https://counter3.optistats.ovh/private/contadorvisitasgratis.php?c=wk1xp84lnfng6zj15999ssps95nxx8p4" border="0"></a>
+
 </body>
 </html>
