--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ Somos uma empresa que presta serviços financeiros online.<br/><!--Invista em no
 </div>
 
 <div class="slide">
-<p class="cT"><img src="img/c.jfif" class="ifoto">Yola Yola<br/><p class="tEX"><i>"Eu amo os vossos serviços."</i><p style="color: #acdf99; font-size: 13px;">25/01</p></p>
+<p class="cT"><img src="img/l.jpg" class="ifoto">Yola Yola<br/><p class="tEX"><i>"Eu amo os vossos serviços."</i><p style="color: #acdf99; font-size: 13px;">25/01</p></p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
