--- a/index.html
+++ b/index.html
@@ -593,19 +593,19 @@ Somos uma empresa que presta serviços financeiros online.<br/><!--Invista em no
 <center title="">
 <div class="container">
 <div class="slide active">
-<p class="cT"><img src="img/b.jpg" class="ifoto">Kwanzaki<br/><p class="tEX"><i>"Bons serviços, estou amando."</i><p style="color: #acdf99; font-size: 13px;">25/01</p></p></p>
+<p class="cT"><img src="img/b.jpg" class="ifoto">Kwanzaki<br/><p class="tEX"><i>"Bons serviços, estou amando."</i><p style="color: #acdf99; font-size: 13px;">16</p></p></p>
 <div id="next" onclick="next()"> >  </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 
 <div class="slide">
-<p class="cT"><img src="img/l.jpg" class="ifoto">Yola<br/><p class="tEX"><i>"Eu amo os vossos serviços."</i><p style="color: #acdf99; font-size: 13px;">25/01</p></p>
+<p class="cT"><img src="img/l.jpg" class="ifoto">Yola<br/><p class="tEX"><i>"Eu amo os vossos serviços."</i><p style="color: #acdf99; font-size: 13px;">15</p></p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div>
 	
 <div class="slide">
-<p class="cT"><img src="img/d.png" class="ifoto">Edson<br/><p class="tEX"><i>"A vossa empresa é a melhor."</i><p style="color: #acdf99; font-size: 13px;">25/01</p></p></p>
+<p class="cT"><img src="img/d.png" class="ifoto">Edson<br/><p class="tEX"><i>"A vossa empresa é a melhor."</i><p style="color: #acdf99; font-size: 13px;">11</p></p></p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div> 
