--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@ Somos uma empresa que presta serviços financeiros online.<br/><!--Invista em no
 	</thead>
 	<tbody style="background: rgba(0,0,9,0.9); color: #333; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
 	<tr>
-	<td class="cTexto" style="font-size: 12px; border: none; padding: 5px;">Acessa a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e transfer <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">50.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 1 hora, enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">60.00<!--(0123456789)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
+	<td class="cTexto" style="font-size: 12px; border: none; padding: 5px;">Acessa a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e transfira <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">50.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 1 hora, enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">60.00<!--(0123456789)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
 	</tr>
 	</tbody>
 
