--- a/index.html
+++ b/index.html
@@ -582,8 +582,9 @@ nav ul li{
 </header>
 
 
-<span class="eMapas"><center style="border: 0px solid #333; padding: 5px;"><h2>KWANZAKI</h2><p style="font-size: 15px; color: gold;border: 1px solid #333; padding:3px;">
-Somos uma empresa que presta serviços financeiros online.<br/><!--Invista em nossa empresa e ganha sampre!--></p></center></span>
+<span class="eMapas"><center style="border: 0px solid #333; padding: 5px;"><h2>KWANZAKI</h2>
+	<p style="font-size: 12px; color: gold;border: 1px solid #333; padding:3px;">
+Serviço financeiro online<!--Somos uma empresa que presta serviços financeiros online.<br/><!--Invista em nossa empresa e ganha sampre!--></p></center></span>
 
 
 
