--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@ span{
 	top: 0;
 	left: 0;
 	right: 0;
-	opacity: 0; 
 	bottom:0;
+	opacity: 1; 
 	position: fixed;
 	background: none;
-	visibility: hidden;
+	visibility: none;
 	align-items: center;
 	justify-content: center;
 }
@@ -642,7 +642,7 @@ nav ul li{
 
 	<thead>
 	<td style="background: #5ff00d; color: #222;">Serviços:</td>
-	<td style="background: #111; cursor:pointer; padding: 2px 4px;"><a href="#" style="color: orange;" onclick="audio.play()">↺</a></td>
+	<td style="background: #111; cursor:pointer; padding: 2px 4px;"><a href="#modalbox1" style="color: orange;" onclick="audio.play()">↺</a></td>
 	</thead>
 	<tbody style="background: rgba(0,0,9,0.9); color: #3ccf8b; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
 	<tr>
