--- a/index.html
+++ b/index.html
@@ -140,8 +140,12 @@ span{
 	border-bottom-left-radius: 0px;
 }
 .eBox{
+		/*
 	background: linear-gradient(45deg, blue, aqua, darkblue);
 	color: white;
+	*/
+	background: linear-gradient(45deg, orange, yellow, orangered);
+	color: #222;
 	border: 1px solid white;
 	box-shadow: 2px 2px 5px blue;
 	
