--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@ span{
 	background: linear-gradient(45deg, blue, aqua, darkblue);
 	color: white;
 	*/
-	background: linear-gradient(45deg, orange, yellow, orangered);
-	color: #222;
+	background: linear-gradient(45deg, orangered, orange, orangered);
+	color: #333;
 	border: 1px solid white;
-	box-shadow: 2px 2px 5px blue;
+	box-shadow: 2px 2px 5px orangered;
 	
 	left: 0px;
 	width: 30%;
