--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ span{
 	color: white;
 	*/
 	background: linear-gradient(45deg, orangered, orange, orangered);
-	color: #333;
+	color: white;
 	border: 1px solid white;
 	box-shadow: 2px 2px 5px orangered;
 	
