--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@ span{
 	color: white;
 	*/
 	background: linear-gradient(45deg, orangered, orange, orangered);
-	color: white;
+	color: #333;
 	border: 1px solid white;
-	box-shadow: 2px 2px 5px orangered;
+	box-shadow: 2px 2px 5px blue;
 	
 	left: 0px;
 	width: 30%;
