--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ span{
 	background: linear-gradient(45deg, orangered, orange, orangered);
 	color: #333;
 	border: 1px solid white;
-	box-shadow: 2px 2px 5px blue;
+	box-shadow: 2px 2px 5px orangered;
 	
 	left: 0px;
 	width: 30%;
