--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ span{
 	color: white;
 	*/
 	background: linear-gradient(45deg, orangered, orange, orangered);
-	color: #222;
+	color: #333;
 	border: 1px solid white;
 	box-shadow: 2px 2px 5px orangered;
 	
@@ -441,6 +441,9 @@ animation: El 1s ease-in-out infinite;
 
 
 @media only screen and (max-width: 900px){
+body{
+	font-size: 20px;
+}
 .ifoto{
     width: 35px;
     height: 35px;
