--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt"> 
 <head>
@@ -16,17 +15,34 @@
 	box-sizing: border-box;
 }
 body{
+	height: 100vh;
 	font-size: 20px;
+	background: rgba(0,0,0,.9);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background: rgba(0,0,0,.9);
-	/*background-image: url("img/c.jfif");*/
+	background-image: url("img/ki.jfif");
 }
 span{
 	color: yellow;
 	font-family: ocr a;
+}
+.sTock{
+	color: lime; 
+	padding: 15px;
+	background: green;
+	font-family: tahoma;
+}
+.eMapas{
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.borderMapas{
+	border: 10px solid #333; width: 80%;
 }
 .btnApostar{
 	top: 13px;
@@ -35,57 +51,35 @@ span{
 	background: black;
 	padding: 10px 25px;
 	font-family: tahoma;
-	border: 1px solid white;
 	text-decoration: none; 
-	transition: all 0.5s ease;
+	transition: all 0.2s ease;
 	box-shadow: 0 0 5px 1px yellow;
 	border-bottom-left-radius: 20px;
 	border-top-right-radius: 20px;
+	border: 1px solid yellow;
+	border-bottom-right-radius: 3px;
+	border-top-left-radius: 3px;
 }
 .btnApostar:active{
-	transform: scale(0.96);
+	transform: scale(0.88);
 }
 .btnApostar:hover{
 	background: yellow;
 	color: rgba(0,0,0,.9);
-	box-shadow: 0 0 5px 1px #999;
-}
-.sTock{
-	color: lime; 
-	padding: 15px;
-	background: green;
-	font-family: tahoma;
-}
-.btnEnviar{
-	width: 100%;
-	color: white;
-	border: none;
-	padding: 12px;
-	cursor: pointer;
-	font-size: 15px;
-	background: lime;
-	margin-top: 1px;
-	border-radius: 5px;
-	transition: all 0.5s ease;
-}
-.btnEnviar:active{
-	transform: scale(0.96);
-}
-.borderMapas{
-	width: 80%;
-	border: 10px solid #333;
+	box-shadow: 0 0 5px 1px white;
+	border: 1px solid white;
 }
 .modal1{
 	top: 0;
 	left: 0;
 	right: 0;
+	opacity: 0; 
 	bottom:0;
-	opacity: 1; 
 	position: fixed;
-	background: none;
-	visibility: none;
+	visibility: hidden;
 	align-items: center;
 	justify-content: center;
+	background: none;
 }
 .modal2{
 	top: 0;
@@ -94,10 +88,10 @@ span{
 	opacity: 0; 
 	bottom:0;
 	position: fixed;
-	background: none;
 	visibility: hidden;
 	align-items: center;
 	justify-content: center;
+	background: none;
 }
 .modal1:target{
 	opacity: 1;
@@ -114,9 +108,11 @@ span{
 	width: 40%; 
 	height: 13vh;
 	padding: 1em;
+	/*overflow: auto;*/
 	position: fixed;
-	background: #222;
+	background: #111;
 	position: relative;
+	/*border-radius: 5px;*/
 	border: 1px solid #222;
 	border-top: 15px solid #222; 
 	border-left: 18px solid #222;
@@ -129,25 +125,27 @@ span{
 	width: 40%; 
 	height: 13vh;
 	padding: 1em;
+	/*overflow: auto;*/
 	position: fixed;
-	background: #222;
+	background: #111;
 	position: relative;
+	/*border-radius: 5px;*/
 	border: 1px solid #222;
-	border-top-left-radius: 0px;
 	border-top: 15px solid #222; 
 	border-left: 18px solid #222;
 	border-bottom: 15px solid #222;
+	border-top-left-radius: 0px;
 	border-bottom-left-radius: 0px;
 }
 .eBox{
-		/*
 	background: linear-gradient(45deg, blue, aqua, darkblue);
 	color: white;
+	/*
+	background: linear-gradient(45deg, orange, yellow, orangered);
+	color: #222;
 	*/
-	background: linear-gradient(45deg, orangered, orange, orangered);
-	color: #333;
 	border: 1px solid white;
-	box-shadow: 2px 2px 5px orangered;
+	box-shadow: 2px 2px 5px blue;
 	
 	left: 0px;
 	width: 30%;
@@ -159,14 +157,22 @@ span{
 	cursor: pointer;
 	border-top-right-radius: 20px;
 	border-bottom-left-radius: 20px;
+	animation: ol 1s ease-in-out infinite;
 }
-.eBox:hover{
-	
-	color: #77ffbb;
-	/*border: 1px solid #77ffbb;
-	background: rgba(0,0,0,0.9);color: white;
-	box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2);
-*/}
+@keyframes ol{
+0%,18%,20%,50.1%,60%,65.1%,80%,90.1%,92%
+{
+color: #fff;
+text-shadow: none;
+}
+100%
+{
+color: #fff;
+text-shadow: 0 0 10px white,
+0 0 20px white,
+0 0 40px white;
+}
+}
 .eCopy{
 	width: 100%;
 	height: 33px;
@@ -176,11 +182,12 @@ span{
 	bottom: 0px;
 	font-size:23px;
 	position: fixed;
+	cursor: pointer;
 	text-align: right;
 	font-family: tahoma;
-	border-top: 1px solid #333;
-	background: rgba(0,0,0,0.9);
-	box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 18px rgba(0, 0, 0, 0.2);
+	border-top: 1px solid rgba(8, 255, 255, 0.2);
+	box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
+	background: rgba(8,8,255,0.3);
 }
 .eYear{
 	color: #333; /*#5ff1dd;*/
@@ -193,9 +200,6 @@ span{
 	font-size:13px;
 	font-family: tahoma;
 	padding: 10px 45px;
-}
-.cTexto{
-	color:#ffbb00;
 }
 table{
 	width: 100%;
@@ -210,9 +214,9 @@ table{
 	background: #444;
 }
 td{ 
-	width: 100%; 
 	padding: 2px;
 	border: 1px solid #555;
+	width: 100%; 
 }
 .btnIniciar{
 	width: 100%;
@@ -266,7 +270,6 @@ header{
 	align-items: center;
 	background: rgba(0,0,0,0.9);
 	justify-content: space-between;
-	z-index: 9;
 }
 .menu{
 	order: 2;
@@ -278,12 +281,13 @@ nav ul{
 	list-style: none;
 }
 nav ul li{
-	margin: 5px;
-	padding: 5px;
-	color: white;
 	display: block;
+	color: white;
 	font-size: 20px;
+	padding: 5px;
 	border-radius: 50px;
+	transition: 0.2s;
+	margin: 5px;
 	text-decoration: none;
 }
 ::-webkit-scrollbar{
@@ -296,28 +300,41 @@ nav ul li{
 ::-webkit-scrollbar-thumb{
 	background: #888;
 }
-a{
-	color: #888;
-	text-decoration: none;
+a{text-decoration: none;}
+.cTexto{ font-size: 15px;}
+.alT{
+	opacity: 0;
+	z-index: -999;
+	color: transparent;
+	right: 5px;
+	bottom: 0px;
+	position: fixed;
+	font-size: 0px;
+	padding: 0px;
+	visibility: hidden;
+	background: transparent;
 }
 .cElect{
-	z-index: 99;
-	right: 41px;
-	color: #999;
-	bottom: 90px;
+	z-index: 6;
+	right: 35px;
+	color: white; 
+	bottom: 50px;
 	display: block;
 	cursor: pointer;
 	position: fixed;
 	font-size: 20px;
 	background: #111;
-	padding: 3px 8px 5px;
 	border-radius: 100px;
-	transition: all 0.4s ease;
+	padding: 2px 6px 4px;
+	transition: all 0.2s ease;
 	border: 2px solid rgba(255,255,9,.3);
 	animation: animate 1s linear infinite;
+	animation: El 1s ease-in-out infinite;
 	box-shadow: 0 0 0 2px green,
-				0 0 0 3px deepskyblue;
-animation: El 1s ease-in-out infinite;
+			0 0 0 3px deepskyblue;
+}
+.cElect:active{
+	transform: scale(0.88);
 }
 @keyframes El{
 0%{
@@ -330,25 +347,6 @@ animation: El 1s ease-in-out infinite;
 	transform: translateY(0);
 }
 }
-.cElect:active{
-	transform: scale(0.90);
-}	
-.alT{
-	opacity: 0;
-	z-index: -999;
-	color: transparent;
-	right: 5px;
-	bottom: 0px;
-	position: fixed;
-	font-size: 0px;
-	padding: 0px;
-	background: transparent;
-}
-
-
-
-
-
 
 
 
@@ -378,7 +376,7 @@ animation: El 1s ease-in-out infinite;
 	background: none;
 	z-index: 1;
 	background: none;
-	bottom: 80px;
+	bottom: 77px;
 	left: 10px;
 	position: fixed;
 }
@@ -423,27 +421,10 @@ animation: El 1s ease-in-out infinite;
 }
 
 
-
-
-
-
-
-.eMapas{
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-
-
-
-
-
 @media only screen and (max-width: 900px){
 .ifoto{
-    width: 45px;
-    height: 45px;
+    width: 35px;
+    height: 35px;
     margin: auto;
     border-radius: 50%;
 }
@@ -453,92 +434,79 @@ animation: El 1s ease-in-out infinite;
 .tEX{
 	font-size: 14px;
 }
-
-
-
 .cElect{
-	right: 15px;
 	bottom: 50px;
-	color: white;
-	font-size: 20px;
-	padding: 3px 8px 5px;
-}
-.cElect:active{
-	transform: scale(0.88);
+	right: 23px;
 }
 .sTock{
-	padding: 0;
 	color: lime; 
+	padding: 0;
 	background: none;
+	font-family: ocr a;
 }
-.horas{
-	font-size: 15px;
-}
+.horas{font-size: 15px;}
 header{
 	height: 60px;
 }
-.menu{
-	order: 1;
-	color: white;
-	display: block;
-	cursor: pointer;
-}
-.menu .le{
-	width: 28px;
-	height: 2px;
-	margin: 5px 0;
-	background: #5ff1dd;
-}
-nav{
-	left: 0;
-	right: 0;
-	top: 60px;
-	height: 0px;
-	width: 100vw;
-	transition: 0.3s;
-	overflow: hidden;
-	position: absolute;
-	background: rgba(2,2,9,0.9);
-}
-nav.active{
-	height: 105px;
-}
-nav ul{
-	opacity: 0;
-	display: block;
-	transition: 0.0s;
-	text-align: center;
-	width: fit-content;
-	margin: 80px auto 0 auto;
-	margin-top: 10px;
-}
-nav.active ul{
-	opacity: 1;
-}
-nav ul li{
-	padding: 8px;
-	background:#222;
-	argin-top: 8px;
-	font-size: 17px;
-	border-top-right-radius: 20px;
-	border-bottom-left-radius: 20px;
-}
-	
+	.menu{
+		display: block;
+		cursor: pointer;
+		display: block; order: 1;
+		color: white;
+	}
+	.menu .le{
+		width: 28px;
+		height: 2px;
+		background: #5ff1dd;
+		margin: 5px 0;
+	}
+	nav{
+		height: 0px;
+		position: absolute;
+		top: 60px;
+		left: 0;
+		right: 0;
+		width: 100vw;
+		background: rgba(2,2,9,0.9);
+		transition: 0.3s;
+		overflow: hidden;
+	}
+	nav.active{
+		height: 105px;
+	}
+	nav ul{
+		display: block;
+		width: fit-content;
+		margin: 80px auto 0 auto;
+		text-align: center;
+		transition: 0.0s;
+		margin-top: 10px;
+		opacity: 0;
+	}
+	nav.active ul{
+		opacity: 1;
+	}
+	nav ul li{
+		background:#222;
+		margin-top: 8px;
+		font-size: 17px;
+		padding: 8px;
+		border-bottom-left-radius: 20px;
+		border-top-right-radius: 20px;
+	}
 .btnApostar{
 	margin-top: 0px;
-	font-size: 15px;
-	font-size: 18px;
+	font-size: 16px;
+	padding: 10px 18px;
 }
-.eBox{
+.cTexto{ font-size: 13px;}
+.eBox{ color: #77ffbb;
 	width: 67%;
 	font-size: 13px;
-	color: #333;
+	border: 1px solid #77ffbb;
 }
 .eCY{
 	padding: 10px 15px;
-}
-.cTexto{
-	color:#ffbb00;
 }
 .modalcontent1{
 	width: 95%; 
@@ -551,23 +519,24 @@ nav ul li{
 	width: 100%; 
 	font-size: 15px;
 	border-radius: 5px;
-}
-.borderMapas{ 
-	width: 100%;
-}
+}/*
+td{
+	display: block;
+}*/
+.borderMapas{ width: 100%;}
 }
 </style>
 </head>
 <body onload="initClock()">
+<div class="eBox" id="clo" title="Info">Aposte se amanhã terá sol e ganhe dinheiro!</div>
+<a href="mailto:p1335614@gmail.com" title="Info" class="cElect" onclick="audio.play()">@</a>
 <div class="eCopy"><span class="eCY" title="Todos os direitos reservados">&copy; <span class="eYear" id="yeare"></span></span></div>
-<div class="eBox" id="clo" title="Info">Envia dinheiro e ganha dinheiro em 1 hora!</div>
-<a href="mailto:p1335614@gmail.com" title="Contactar" class="cElect" onclick="audio.play()">@</a>
 
 <header>
 		<div class="horas">
-					<a class="btnApostar" href="#modalbox1" title="Apostar" onclick="audio.play()">Enviar</a>
+					<a class="btnApostar" href="#modalbox1" title="Apostar" onclick="audio.play()">Apostar</a>
 		</div>
-		<div class="menu" title="Iniciar">
+		<div class="menu">
 			
 			<div class="le" onclick="audio.play()"></div>
 			<div class="le" onclick="audio.play()"></div>
@@ -580,22 +549,58 @@ nav ul li{
 					<span title="Horas"><span id="hour">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span> <span id="period">AM</span></span>
 				</li>
 				<li>
-					<span title="Stock" class="sTock">7939,94 Kz</span>
+					<span title="Stock" class="sTock">8868.80 Kz</span>
 				</li>
 			</ul>
 		</nav>
 </header>
 
 
-<span class="eMapas"><center style="border: 1px solid #333; padding: 5px;"><h2>KWANZAKI</h2>
-	<!--<p style="font-size: 12px; color: gold;border: 1px solid #333; padding:3px;">	Serviço financeiro online<!--Somos uma empresa que presta serviços financeiros online.<br/><!--Invista em nossa empresa e ganha sampre!</p>--></center></span>
+<span class="eMapas">
+<!--<img src="e.png" width="56%" class="borderMapas">-->
 
+<iframe class="borderMapas" width="100" height="200" src="https://embed.windy.com/embed2.html?lat=-10.769&lon=18.545&detailLat=-8.830&detailLon=13.240&width=650&height=450&zoom=6&level=surface&overlay=rain&product=ecmwf&menu=&message=&marker=&calendar=now&pressure=true&type=map&location=coordinates&detail=true&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0"></iframe>
 
+</span>
 
+<!--modal APOSTAS-->
+<div id="modalbox1" class="modal1">
+<table class="modalcontent1">
 
+	<thead>
+	<td style="background: #5ff00d; color: #222;">Informções:</td>
+	<td style="background: #111; cursor:pointer; padding: 2px 5px;"><a href="#modalbox2" style="color: orange;" onclick="audio.play()">↻</a></td>
+	</thead>
+	<tbody style="background: #111; color: #333; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
+	<tr>
+	<td class="cTexto" style="color:#ffbb00; border: none; padding: 5px;">Acessa a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e transfer <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">100.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 24 horas, se a sua previsão estiver certa, enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">111.00<!--(01234567891011)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
+	</tr>
+	</tbody>
 
+</table>
+</div>
 
-<span class=""><!--==================-->
+<!--modal SERVIÇOS-->
+<div id="modalbox2" class="modal2">
+<table class="modalcontent2">
+
+	<thead>
+	<td style="background: #5ff00d; color: #222;">Serviços:</td>
+	<td style="background: #111; cursor:pointer; padding: 2px 5px;"><a href="#" style="color: orange;" onclick="audio.play()">↺</a></td>
+	</thead>
+	<tbody class="cTexto" style="background: #111; color: #3ccf8b; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
+	<tr>
+	<td>111.05 Kz</td>
+	<td>12:00:27</td>
+	<td>94028...</td>
+	</tr>
+	</tbody>
+
+</table>
+</div>
+</div>
+
+<!--==================-->
 <center title="">
 <div class="container">
 <div class="slide active">
@@ -611,55 +616,13 @@ nav ul li{
 </div>
 	
 <div class="slide">
-<p class="cT"><img src="img/d.png" class="ifoto">Edson<br/><p class="tEX"><i>"A vossa empresa é a melhor."</i><p style="color: #acdf99; font-size: 13px;">Fev</p></p></p>
+<p class="cT"><img src="img/usds.jpg" class="ifoto">Edson<br/><p class="tEX"><i>"A vossa empresa é a melhor."</i><p style="color: #acdf99; font-size: 13px;">Fev</p></p></p>
 <div id="next" onclick="next()"> > </div>
 <div id="prev" onclick="prev()"> < </div>
 </div> 
 </div></center>
 <!--==================-->
-</span>
 
-
-
-
-
-
-<!--modal INFORMAÇÕES-->
-<div id="modalbox1" class="modal1">
-<table class="modalcontent1">
-
-	<thead>
-	<td style="background: #5ff00d; color: #222;">Informções:</td>
-	<td style="background: #111; cursor:pointer; padding: 2px 4px;"><a href="#modalbox2" style="color: orange;" onclick="audio.play()">↻</a></td>
-	</thead>
-	<tbody style="background: rgba(0,0,9,0.9); color: #333; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
-	<tr>
-	<td class="cTexto" style="font-size: 12px; border: none; padding: 5px;">Acessa a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e transfer <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">50.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 1 hora, enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">60.00<!--(0123456789)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
-	</tr>
-	</tbody>
-
-</table>
-</div>
-
-<!--modal SERVIÇOS-->
-<div id="modalbox2" class="modal2">
-<table class="modalcontent2">
-
-	<thead>
-	<td style="background: #5ff00d; color: #222;">Serviços:</td>
-	<td style="background: #111; cursor:pointer; padding: 2px 4px;"><a href="#modalbox1" style="color: orange;" onclick="audio.play()">↺</a></td>
-	</thead>
-	<tbody style="background: rgba(0,0,9,0.9); color: #3ccf8b; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
-	<tr>
-	<td>60.06 Kz</td>
-	<td>12:00:27</td>
-	<td>94028...</td>
-	</tr>
-	</tbody>
-
-</table>
-</div>
-</div>
 
 <script type="text/javascript">
 //Script ÁUDIO clicks
@@ -681,6 +644,7 @@ nav ul li{
 		navBar.classList.toggle("active")
 	}
 </script>
+
 
 <script type="text/javascript">
 //Script POST
@@ -704,7 +668,6 @@ function prev(){
 </script>
 
 <script type="text/javascript" charset="utf-8">
-//Script HORAS
 function updateClock(){
 var now = new Date();
 hou = now.getHours(),
@@ -736,6 +699,5 @@ window.setInterval("updateClock()", 1);
 }
 </script>
 <a href="https://www.contadorvisitasgratis.com" target="_blank" class="alT" title="Visitas"><img src="https://counter3.optistats.ovh/private/contadorvisitasgratis.php?c=wk1xp84lnfng6zj15999ssps95nxx8p4" border="0"></a>
-
 </body>
 </html>
