--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ a{text-decoration: none;}
 	background: transparent;
 }
 .cElect{
+	font-family: arial black;
 	z-index: 6;
 	right: 35px;
 	color: white; 
@@ -320,14 +321,16 @@ a{text-decoration: none;}
 	cursor: pointer;
 	position: fixed;
 	font-size: 20px;
-	background: #111;
+	background: blue;
 	border-radius: 100px;
-	padding: 2px 6px 4px;
+	padding: 0.3px 10px 0.3px;
 	transition: all 0.2s ease;
 	border: 2px solid rgba(255,255,9,.3);
 	animation: animate 1s linear infinite;
 	box-shadow: 0 0 0 2px green,
-			0 0 0 3px deepskyblue;
+			0 0 0 3px deepskyblue,
+			0 0 0 6px white;
+	/*animation: El 1s ease-in-out infinite;*/
 }
 .cElect:active{
 	transform: scale(0.88);
@@ -525,7 +528,7 @@ td{
 <body onload="initClock()">
 <img style="position: fixed; z-index: -999; opacity: 0; visibility: hidden;" src="img/oi.png" width="1%">
 <div class="eBox" id="clo" title="Info">Aposte se amanhã terá sol e ganhe dinheiro!</div>
-<a href="mailto:p1335614@gmail.com" title="Info" class="cElect" onclick="audio.play()">@</a>
+<a href="https://www.facebook.com/profile.php?id=61556163702447" target="_blank" title="Info" class="cElect" onclick="audio.play()">f</a>
 <div class="eCopy"><span class="eCY" title="Todos os direitos reservados">&copy; <span class="eYear" id="yeare"></span></span></div>
 
 <header>
