--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@ a{text-decoration: none;}
 	font-size: 20px;
 	background: blue;
 	border-radius: 100px;
-	padding: 0.3px 10px 0.3px;
+	padding: 0.1px 10px 0.1px;
 	transition: all 0.2s ease;
 	border: 2px solid rgba(255,255,9,.3);
 	animation: animate 1s linear infinite;
 	box-shadow: 0 0 0 2px green,
 			0 0 0 3px deepskyblue,
 			0 0 0 6px white;
-	/*animation: El 1s ease-in-out infinite;*/
+	animation: El 1s ease-in-out infinite;
 }
 .cElect:active{
 	transform: scale(0.88);
