--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@ a{text-decoration: none;}
 }
 .cElect{
 	font-family: arial black;
+	font-weight: bold;
 	z-index: 6;
 	right: 35px;
 	color: white; 
@@ -329,7 +330,7 @@ a{text-decoration: none;}
 	animation: animate 1s linear infinite;
 	box-shadow: 0 0 0 2px green,
 			0 0 0 3px deepskyblue,
-			0 0 0 6px white;
+			0 0 0 6px  #333;
 	animation: El 1s ease-in-out infinite;
 }
 .cElect:active{
@@ -498,10 +499,9 @@ header{
 	font-size: 16px;
 	padding: 12px 20px;
 }
-.eBox{ color: #77ffbb;
+.eBox{ 
 	width: 67%;
 	font-size: 12px;
-	border: 1px solid #77ffbb;
 }
 .eCY{
 	padding: 10px 15px;
