--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ td{
 	</thead>
 	<tbody style="background: #111; color: #333; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
 	<tr>
-	<td class="cTexto" style="color:#ffbb00; border: none; padding: 5px;">Acesse a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e envie <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">100.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 24 horas, se a sua previsão estiver certa, <b style="background: #09bbaa;">e em Luanda tiver sol,</b> enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">110.00<!--(012345)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
+	<td class="cTexto" style="color:#ffbb00; border: none; padding: 5px;">Acesse a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e envie <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">100.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 24 horas, se a sua previsão estiver certa, <b style="background: #09bbaa;">e tiver sol em Luanda,</b> enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">110.00<!--(012345)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
 	</tr>
 	</tbody>
 
