--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@ text-shadow: 0 0 10px white,
 	cursor: pointer;
 	text-align: right;
 	font-family: tahoma;
-	border-top: 1px solid rgba(8, 255, 255, 0.2);
+	border-top: 1px solid #333;
 	box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.2), -1px -1px 8px rgba(0, 0, 0, 0.2);
-	background: rgba(8,8,255,0.7);
+	background: #050505;
 }
 .eYear{
 	color: #333; /*#5ff1dd;*/
@@ -572,7 +572,7 @@ td{
 	</thead>
 	<tbody style="background: #111; color: #333; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
 	<tr>
-	<td class="cTexto" style="color:#ffbb00; border: none; padding: 5px;">Acesse a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e envie <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">500.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 72 horas, se a sua previsão estiver certa, <b style="background: #09bbaa;">e tiver sol em Luanda,</b> enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">550.00<!--(012345)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
+	<td class="cTexto" style="color:#ffbb00; border: none; padding: 5px;">Acesse a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e envie <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">500.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 72 horas, se a sua previsão estiver certa, <b>e tiver sol em Luanda,</b> enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">550.00<!--(012345)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
 	</tr>
 	</tbody>
 
