--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ td{
 </head>
 <body onload="initClock()">
 <img style="position: fixed; z-index: -999; opacity: 0; visibility: hidden;" src="img/oi.png" width="1%">
-<div class="eBox" id="clo" title="Info">Aposte se amanhã terá sol em Luanda e ganhe dinheiro!</div>
+<div class="eBox" id="clo" title="Info">Aposte se amanhã terá sol e ganhe dinheiro!</div>
 <a href="https://web.facebook.com/profile.php?id=61556163702447" target="_blank" title="Contactar" class="cElect" onclick="audio.play()">@</a>
 <div class="eCopy"><span class="eCY" title="Todos os direitos reservados">&copy; <span class="eYear" id="yeare"></span></span></div>
 
@@ -572,7 +572,7 @@ td{
 	</thead>
 	<tbody style="background: #111; color: #333; display: block; height: 20vh; border: 1px solid silver; overflow: auto;">
 	<tr>
-	<td class="cTexto" style="color:#ffbb00; border: none; padding: 5px;">Acesse a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e envie <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">500.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 72 horas, se a sua previsão estiver certa, <b>e tiver sol em Luanda,</b> enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">550.00<!--(012345)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
+	<td class="cTexto" style="color:#ffbb00; border: none; padding: 5px;">Acesse a sua conta <b style="color: yellow; background: orangered;">Unitel money</b> e envie <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">500.00 Kz</b> a este número <b style="color: yellow; background: orangered;">940278820 Unitel money.</b> Após 72 horas, se a sua previsão estiver certa, <b>e em Luanda tiver sol,</b> enviaremos <b style="color: lime; font-family: tahoma; background: green; padding: 1px;">550.00<!--(012345)--> Kz</b> em sua conta <b style="color: yellow; font-family: tahoma; background: orangered; padding: 1px;">Unitel money.</b></td>
 	</tr>
 	</tbody>
 
