--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ td{
 <body onload="initClock()">
 <img style="position: fixed; z-index: -999; opacity: 0; visibility: hidden;" src="img/oi.png" width="1%">
 <!--<div class="eBox" id="clo" title="Info">Aposte se amanhã terá sol e ganhe dinheiro!</div>-->
-<a href="https://web.facebook.com/profile.php?id=61556163702447" target="_blank" title="Contactar" class="cElect" onclick="audio.play()">@</a>
+<a href="mailto:p1335614@gmail.com" title="Contactar" class="cElect" onclick="audio.play()">@</a>
 <div class="eCopy"><span class="eCY" title="Todos os direitos reservados">&copy; <span class="eYear" id="yeare"></span></span></div>
 
 <header>
